--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -933,9 +933,9 @@
         "        # Get datetime \n",
         "        temporal_coverage = results.DataCollection.get_umm(\n",
         "            result, 'TemporalExtent')\n",
-        "        granule_datetime = (\n",
+        "        granule_datetime = (pd.to_datetime(\n",
         "            temporal_coverage['RangeDateTime']['BeginningDateTime']\n",
-        "        )\n",
+        "        ))\n",
         "\n",
         "        # Assemble granule polygon \n",
         "        spatial_ext = results.DataCollection.get_umm(result, 'SpatialExtent')\n",
@@ -997,7 +997,7 @@
         "    granule_results_gdf = gpd.GeoDataFrame(\n",
         "            uri_groups_df, \n",
         "            geometry=uri_groups_df['granule_polygon'], \n",
-        "            crs=ccrs.Mercator())\n",
+        "            crs=\"EPSG:4326\")\n",
         "\n",
         "    return granule_results_gdf "
       ]
