compute reflectance da and create composites

--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -5006,19 +5006,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 90,
       "id": "4fc6084f",
       "metadata": {},
       "outputs": [
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "a17f50b49a9546fa884ecde0fec1bb2f",
+              "model_id": "b83657605b13485c8f0146f71ed08a7e",
               "version_major": 2,
               "version_minor": 0
             },
             "text/plain": [
-              "  0%|          | 0/1 [00:00<?, ?it/s]"
+              "  0%|          | 0/76 [00:00<?, ?it/s]"
             ]
           },
           "metadata": {},
@@ -5028,36 +5028,87 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Processing granule HLS.L30.T15RYP.2023268T163212.v2.0 2023-09-25\n"
+            "Processing granule HLS.L30.T15RYN.2023124T163132.v2.0 2023-05-04\n",
+            "Processing granule HLS.L30.T15RYP.2023124T163132.v2.0 2023-05-04\n",
+            "Processing granule HLS.L30.T16RBT.2023124T163132.v2.0 2023-05-04\n",
+            "Processing granule HLS.L30.T16RBU.2023124T163132.v2.0 2023-05-04\n",
+            "Processing granule HLS.L30.T15RYN.2023132T163144.v2.0 2023-05-12\n",
+            "Processing granule HLS.L30.T15RYP.2023132T163144.v2.0 2023-05-12\n",
+            "Processing granule HLS.L30.T16RBT.2023132T163144.v2.0 2023-05-12\n",
+            "Processing granule HLS.L30.T16RBU.2023132T163144.v2.0 2023-05-12\n",
+            "Processing granule HLS.L30.T15RYN.2023140T163123.v2.0 2023-05-20\n",
+            "Processing granule HLS.L30.T15RYP.2023140T163123.v2.0 2023-05-20\n",
+            "Processing granule HLS.L30.T16RBT.2023140T163123.v2.0 2023-05-20\n",
+            "Processing granule HLS.L30.T16RBU.2023140T163123.v2.0 2023-05-20\n",
+            "Processing granule HLS.L30.T15RYN.2023148T163134.v2.0 2023-05-28\n",
+            "Processing granule HLS.L30.T15RYP.2023148T163134.v2.0 2023-05-28\n",
+            "Processing granule HLS.L30.T16RBT.2023148T163134.v2.0 2023-05-28\n",
+            "Processing granule HLS.L30.T16RBU.2023148T163134.v2.0 2023-05-28\n",
+            "Processing granule HLS.L30.T15RYN.2023156T163128.v2.0 2023-06-05\n",
+            "Processing granule HLS.L30.T15RYP.2023156T163128.v2.0 2023-06-05\n",
+            "Processing granule HLS.L30.T16RBT.2023156T163128.v2.0 2023-06-05\n",
+            "Processing granule HLS.L30.T16RBU.2023156T163128.v2.0 2023-06-05\n",
+            "Processing granule HLS.L30.T15RYN.2023164T163126.v2.0 2023-06-13\n",
+            "Processing granule HLS.L30.T15RYP.2023164T163126.v2.0 2023-06-13\n",
+            "Processing granule HLS.L30.T16RBT.2023164T163126.v2.0 2023-06-13\n",
+            "Processing granule HLS.L30.T16RBU.2023164T163126.v2.0 2023-06-13\n",
+            "Processing granule HLS.L30.T15RYN.2023172T163134.v2.0 2023-06-21\n",
+            "Processing granule HLS.L30.T15RYP.2023172T163134.v2.0 2023-06-21\n",
+            "Processing granule HLS.L30.T16RBT.2023172T163134.v2.0 2023-06-21\n",
+            "Processing granule HLS.L30.T16RBU.2023172T163134.v2.0 2023-06-21\n",
+            "Processing granule HLS.L30.T15RYN.2023180T163132.v2.0 2023-06-29\n",
+            "Processing granule HLS.L30.T15RYP.2023180T163132.v2.0 2023-06-29\n",
+            "Processing granule HLS.L30.T16RBT.2023180T163132.v2.0 2023-06-29\n",
+            "Processing granule HLS.L30.T16RBU.2023180T163132.v2.0 2023-06-29\n",
+            "Processing granule HLS.L30.T15RYN.2023188T163146.v2.0 2023-07-07\n",
+            "Processing granule HLS.L30.T15RYP.2023188T163146.v2.0 2023-07-07\n",
+            "Processing granule HLS.L30.T16RBT.2023188T163146.v2.0 2023-07-07\n",
+            "Processing granule HLS.L30.T16RBU.2023188T163146.v2.0 2023-07-07\n",
+            "Processing granule HLS.L30.T15RYN.2023196T163142.v2.0 2023-07-15\n",
+            "Processing granule HLS.L30.T15RYP.2023196T163142.v2.0 2023-07-15\n",
+            "Processing granule HLS.L30.T16RBT.2023196T163142.v2.0 2023-07-15\n",
+            "Processing granule HLS.L30.T16RBU.2023196T163142.v2.0 2023-07-15\n",
+            "Processing granule HLS.L30.T15RYN.2023204T163150.v2.0 2023-07-23\n",
+            "Processing granule HLS.L30.T15RYP.2023204T163150.v2.0 2023-07-23\n",
+            "Processing granule HLS.L30.T16RBT.2023204T163150.v2.0 2023-07-23\n",
+            "Processing granule HLS.L30.T16RBU.2023204T163150.v2.0 2023-07-23\n",
+            "Processing granule HLS.L30.T15RYN.2023212T163147.v2.0 2023-07-31\n",
+            "Processing granule HLS.L30.T15RYP.2023212T163147.v2.0 2023-07-31\n",
+            "Processing granule HLS.L30.T16RBT.2023212T163147.v2.0 2023-07-31\n",
+            "Processing granule HLS.L30.T16RBU.2023212T163147.v2.0 2023-07-31\n",
+            "Processing granule HLS.L30.T15RYN.2023220T163157.v2.0 2023-08-08\n",
+            "Processing granule HLS.L30.T15RYP.2023220T163157.v2.0 2023-08-08\n",
+            "Processing granule HLS.L30.T16RBT.2023220T163157.v2.0 2023-08-08\n",
+            "Processing granule HLS.L30.T16RBU.2023220T163157.v2.0 2023-08-08\n",
+            "Processing granule HLS.L30.T15RYN.2023228T163152.v2.0 2023-08-16\n",
+            "Processing granule HLS.L30.T15RYP.2023228T163152.v2.0 2023-08-16\n",
+            "Processing granule HLS.L30.T16RBT.2023228T163152.v2.0 2023-08-16\n",
+            "Processing granule HLS.L30.T16RBU.2023228T163152.v2.0 2023-08-16\n",
+            "Processing granule HLS.L30.T15RYN.2023236T163205.v2.0 2023-08-24\n",
+            "Processing granule HLS.L30.T15RYP.2023236T163205.v2.0 2023-08-24\n",
+            "Processing granule HLS.L30.T16RBT.2023236T163205.v2.0 2023-08-24\n",
+            "Processing granule HLS.L30.T16RBU.2023236T163205.v2.0 2023-08-24\n",
+            "Processing granule HLS.L30.T15RYN.2023244T163203.v2.0 2023-09-01\n",
+            "Processing granule HLS.L30.T15RYP.2023244T163203.v2.0 2023-09-01\n",
+            "Processing granule HLS.L30.T16RBT.2023244T163203.v2.0 2023-09-01\n",
+            "Processing granule HLS.L30.T16RBU.2023244T163203.v2.0 2023-09-01\n",
+            "Processing granule HLS.L30.T15RYN.2023252T163206.v2.0 2023-09-09\n",
+            "Processing granule HLS.L30.T15RYP.2023252T163206.v2.0 2023-09-09\n",
+            "Processing granule HLS.L30.T16RBT.2023252T163206.v2.0 2023-09-09\n",
+            "Processing granule HLS.L30.T16RBU.2023252T163206.v2.0 2023-09-09\n",
+            "Processing granule HLS.L30.T15RYN.2023260T163211.v2.0 2023-09-17\n",
+            "Processing granule HLS.L30.T15RYP.2023260T163211.v2.0 2023-09-17\n",
+            "Processing granule HLS.L30.T16RBT.2023260T163211.v2.0 2023-09-17\n",
+            "Processing granule HLS.L30.T16RBU.2023260T163211.v2.0 2023-09-17\n",
+            "Processing granule HLS.L30.T15RYN.2023268T163212.v2.0 2023-09-25\n",
+            "Processing granule HLS.L30.T15RYP.2023268T163212.v2.0 2023-09-25\n",
+            "Processing granule HLS.L30.T16RBT.2023268T163212.v2.0 2023-09-25\n",
+            "Processing granule HLS.L30.T16RBU.2023268T163212.v2.0 2023-09-25\n"
           ]
         }
       ],
       "source": [
         "delta_reflectance_da_df = compute_reflectance_da(ms_delta_metadata, ms_delta_gdf)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 9,
-      "id": "68e1e0da",
-      "metadata": {
-        "highlight": true
-      },
-      "outputs": [],
-      "source": [
-        "# Loop through each image\n",
-        "\n",
-        "    # Open granule cloud cover\n",
-        "\n",
-        "    # Compute cloud mask\n",
-        "\n",
-        "    # Loop through each spectral band\n",
-        "\n",
-        "        # Open, crop, and mask the band\n",
-        "\n",
-        "        # Add the DataArray to the metadata DataFrame row\n",
-        "\n",
-        "    # Reassemble the metadata DataFrame"
       ]
     },
     {
@@ -5095,20 +5146,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
-      "id": "6d6ef620",
-      "metadata": {
-        "highlight": true
-      },
+      "execution_count": 91,
+      "id": "0d156f51",
+      "metadata": {},
       "outputs": [],
       "source": [
-        "# Merge and composite and image for each band\n",
+        "# @cached('delta_reflectance_da')\n",
+        "def create_composite_das(granule_da_df):\n",
+        "    composite_das = []\n",
         "\n",
-        "        # Merge granules for each date\n",
+        "    for band, band_df in tqdm(granule_da_df.groupby('band')):\n",
+        "        merged_das = []\n",
         "\n",
-        "        # Mask negative values\n",
+        "        for granule_date, date_df in tqdm(band_df.groupby('granule_date')):\n",
         "\n",
-        "    # Composite images across dates"
+        "            # For each date merge granules\n",
+        "            merged_da = rxrmerge.merge_arrays(list(date_df.da))\n",
+        "\n",
+        "            # Mask all negative values\n",
+        "            merged_da = merged_da.where(merged_da > 0)\n",
+        "            merged_das.append(merged_da)\n",
+        "\n",
+        "        # Create composite images across dates\n",
+        "        composite_da = xr.concat(\n",
+        "            merged_das, dim='granule_date').mean('granule_date')\n",
+        "\n",
+        "        # Add the band as a dimension\n",
+        "        composite_da['band'] = int(band[1:])\n",
+        "        \n",
+        "        # Name the composite DataArray\n",
+        "        composite_da.name = 'reflectance'\n",
+        "\n",
+        "        composite_das.append(composite_da)\n",
+        "\n",
+        "    return xr.concat(composite_das, dim='band')"
       ]
     },
     {
